--- a/app/styles/components/annotation-sidebar.less
+++ b/app/styles/components/annotation-sidebar.less
@@ -324,7 +324,7 @@
     line-height: 0;
     height: 24px;
     width: 24px;
-    padding: 0 8px;
+    padding: 0 13px 0 5px !important; /* For css overwritings */
     opacity: .5;
 }
 
