--- a/app/styles/components/buttons.less
+++ b/app/styles/components/buttons.less
@@ -20,7 +20,7 @@
 }
 
 .btn-xs {
-    padding: 1px 5px !important;
+    padding: 3px 5px !important;
     text-shadow: none;
 }
 
@@ -34,7 +34,7 @@
     display: inline-block;
     height: 29px;
     margin: 0;
-    padding: 0 10px;
+    padding: 0 10px !important;
     .vertical-gradient(@color-button-bg, @button-gradient-level);
     border: 0;
     outline: 0;
@@ -75,7 +75,6 @@
     font-size: 11px;
     padding-bottom: 2px;
 }
-
 
 /* ------------------------------------ *\
    #CALL-TO-ACTION-BUTTON
