--- a/app/styles/components/calendar.less
+++ b/app/styles/components/calendar.less
@@ -350,8 +350,9 @@ This is the original CSS style of the plugin
 
 /* Angular strap calendar widget used to select dates in the filters */
 
-
-
-
+.datepicker .btn {
+    margin: 0 auto;
+    padding: 5px !important; /* For css overwritings */
+}
 
 
