--- a/app/styles/components/tabs.less
+++ b/app/styles/components/tabs.less
@@ -75,6 +75,11 @@
         font-size: inherit;
         transition: initial;
     }
+
+    > div {
+        width: auto;
+        padding: 0;
+    }
 }
 
 .tab-content {
